--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
     "displayName": "R LSP Client",
     "description": "",
     "version": "0.0.1",
+    "license": "SEE LICENSE IN LICENSE",
     "publisher": "Ikuyadeu",
     "icon": "images/Rlogo.png",
     "engines": {
         "vscode": "^1.19.0"
     },
-    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/REditorSupport/vscode-r-lsp"
+    },
+    "bugs": {
+        "url": "https://github.com/REditorSupport/vscode-r-lsp/issues"
+    },
     "categories": [
-        "Languages"
+        "Languages",
+        "Linters",
+        "Other"
+    ],
+    "keywords": [
+        "R",
+        "R language"
     ],
     "activationEvents": [
         "onLanguage:r"
