--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vscode-r-lsp",
+    "name": "r-lsp",
     "displayName": "R LSP Client",
     "description": "",
     "version": "0.0.1",
