--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "r-lsp",
   "displayName": "R LSP Client",
   "description": "R language support for VS Code, powered by the R Language Server Protocol.",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "license": "SEE LICENSE IN LICENSE",
   "publisher": "REditorSupport",
   "icon": "images/Rlogo.png",
@@ -38,12 +38,17 @@
   "contributes": {
     "configuration": {
       "type": "object",
-      "title": "r",
+      "title": "R",
       "properties": {
-        "r.rpath.lsp": {
+        "R.LSP.Path": {
           "type": "string",
           "default": "",
-          "description": "R.exe path for Language Server"
+          "description": "Path to R binary for Language Server"
+        },
+        "R.LSP.Debug": {
+          "type": "boolean",
+          "default": false,
+          "description": "Debug R LSP"
         }
       }
     }
@@ -56,7 +61,7 @@
     "tslint": "^5.11.0"
   },
   "dependencies": {
-    "child_process": "^1.0.2",
-    "vscode-languageclient": "^5.1.0"
+    "mz": "^2.7.0",
+    "vscode-languageclient": "^5.1.1"
   }
 }
