--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "r-lsp",
   "displayName": "R Language Support",
-  "description": "R Language Support by the Language Server Protocol.",
+  "description": "R language support for [VS Code](https://code.visualstudio.com/), powered by the [R language server](https://github.com/REditorSupport/languageserver).",
   "version": "0.1.0",
   "license": "SEE LICENSE IN LICENSE",
   "publisher": "REditorSupport",
@@ -61,12 +61,14 @@
   "devDependencies": {
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.4",
+    "@types/winreg": "^1.2.30",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.1",
-    "vscode": "^1.1.21",
-    "tslint": "^5.11.0"
+    "vscode": "^1.1.21"
   },
   "dependencies": {
     "mz": "^2.7.0",
-    "vscode-languageclient": "^5.1.1"
+    "vscode-languageclient": "^5.1.1",
+    "winreg": "^1.2.4"
   }
 }
