--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   ],
   "activationEvents": [
     "onLanguage:r",
-    "onLanguage:rmarkdown"
+    "onLanguage:rmd"
   ],
   "main": "./out/src/extension",
   "scripts": {
