--- a/package.json
+++ b/package.json
@@ -39,12 +39,29 @@
   "contributes": {
     "configuration": {
       "type": "object",
-      "title": "R",
+      "title": "R LSP Client",
       "properties": {
+        "r.rpath.windows": {
+          "type": "string",
+          "default": "",
+          "description": "Path to an R executable for Windows. Must be \"vanilla\" R, not radian etc.!"
+        },
+        "r.rpath.mac": {
+          "type": "string",
+          "default": "",
+          "description": "Path to an R executable for macOS. Must be \"vanilla\" R, not radian etc.!"
+        },
+        "r.rpath.linux": {
+          "type": "string",
+          "default": "",
+          "description": "Path to an R executable for Linux. Must be \"vanilla\" R, not radian etc.!"
+        },
         "r.lsp.path": {
           "type": "string",
           "default": "",
-          "description": "Path to R binary for launching Language Server"
+          "description": "Path to R binary for launching Language Server",
+          "markdownDeprecationMessage": "Will be deprecated. Use `#r.rpath.windows#`, `#r.rpath.mac#`, or `#r.rpath.linux#` instead.",
+          "deprecationMessage": "Will be deprecated. Use r.rpath.windows, r.rpath.mac, or r.rpath.linux instead."
         },
         "r.lsp.args": {
           "type": "array",
