--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "publisher": "REditorSupport",
   "icon": "images/Rlogo.png",
   "engines": {
-    "vscode": "^1.38.1"
+    "vscode": "^1.51.0"
   },
   "repository": {
     "type": "git",
@@ -92,16 +92,17 @@
     }
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.11.4",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^14.14.10",
+    "@types/vscode": "^1.51.0",
     "@types/winreg": "^1.2.30",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.1",
-    "vscode": "^1.1.21"
+    "typescript": "^4.1.3",
+    "vscode-test": "^1.4.1"
   },
   "dependencies": {
     "mz": "^2.7.0",
-    "vscode-languageclient": "^5.1.1",
+    "vscode-languageclient": "^6.1.4",
     "winreg": "^1.2.4"
   }
 }
