--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   "main": "./out/src/extension",
   "scripts": {
     "vscode:prepublish": "tsc -p ./",
-    "compile": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test"
+    "compile": "tsc -watch -p ./"
   },
   "contributes": {
     "configuration": {
